--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ tqdm==4.64.1
 pyyaml==6.0
 nltk==3.8.1
 transformers==4.36.2
-torch==2.0.1
+torch==1.13.1+cpu
 protobuf==3.20.*
 altair<5
 pandas==2.2.1
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
