--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+pip>=23.3
+setuptools>=68
+wheel
+
 streamlit>=1.8.1
 bs4==0.0.1
 requests==2.28.1
 tqdm==4.64.1
-pyyaml==6.0
+pyyaml==6.0.1
 nltk==3.8.1
 transformers==4.36.2
 torch==1.13.1+cpu
