--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-pip>=23.3
-setuptools>=68
-wheel
-
 streamlit>=1.8.1
+utils==1.0.2
 bs4==0.0.1
 requests==2.28.1
 tqdm==4.64.1
-pyyaml==6.0.1
+pyyaml==6.0
 nltk==3.8.1
 transformers==4.36.2
-torch==1.13.1+cpu
+torch==2.1.2
 protobuf==3.20.*
 altair<5
 pandas==2.2.1
---find-links https://download.pytorch.org/whl/cpu/torch_stable.html
